[package]
name = "ruspiro-kernel"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.2.0" # remember to update html_root_url
description = "This crate showcases the usage of the different RusPiRo crates to build a bare metal kernel for Raspberry Pi 3"
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-kernel/tree/v0.2.0"
documentation = "https://docs.rs/ruspiro-kernel/0.2.0"
readme = "README.md"
keywords = ["RusPiRo", "raspberrypi", "baremetal", "kernel", "32bit"]
categories = ["no-std", "embedded"]
edition = "2018"
publish = false

# indicate that this is a workspace comprising several folders
[workspace]

[[bin]]
name = "kernel7"
path = "src/kernel.rs"

[dependencies]
ruspiro-sdk = { path = "../ruspiro-sdk", features = [
        "with_uart",
        "with_console",
        "with_i2c"
    ] }

[features]
default = ["ruspiro_pi3"]
ruspiro_pi3 = ["ruspiro-sdk/ruspiro_pi3"]
